--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.1.2
+  smartrefresh: ^0.0.2
+  pull_to_refresh_flutter3: ^2.0.2
+  sqflite: ^2.3.2
+  flutter_spinkit: ^5.2.1
+  showcaseview: ^3.0.0
+  get_it: ^7.6.7
+  json_annotation: ^4.9.0
+  flutter_localizations:
+    sdk: flutter
+  intl: any
+
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +57,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,6 +71,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
