--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_secure_storage: ^4.2.1
   http: ^1.1.0
   another_flushbar: ^1.12.30
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
