--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   http: ^1.1.0
   another_flushbar: ^1.12.30
   carousel_slider: ^4.2.1
+  flutter_rating_stars: ^1.0.3+4
 
 
 dev_dependencies:
