--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   another_flushbar: ^1.12.30
   carousel_slider: ^4.2.1
   flutter_rating_stars: ^1.0.3+4
+  font_awesome_flutter: ^10.7.0
 
 
 dev_dependencies:
