--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter_rating_stars: ^1.0.3+4
   font_awesome_flutter: ^10.7.0
+  url_launcher: ^6.2.4
 
 
 dev_dependencies:
