--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_rating_stars: ^1.0.3+4
   font_awesome_flutter: ^10.7.0
   url_launcher: ^6.2.4
+  fl_downloader: ^2.0.2
 
 
 dev_dependencies:
